# Documentation

./: .readthedocs.yaml  README.md  conf.py  example.rst  index.rst  pyproject.toml
.github/workflows/: static.yml
documents/: about_us.md  change_the_world.md  contact_support.md  contact_us.md  features.md  getting_started.md  news.md  outputs.md  technical_specifications.md
documents/API/: CLINICALTRIALS.md  MYGENE.md  MYVARIANT.md  PUBMED.md  REPORTER.md
documents/change_the_world/: idea_1.md
documents/news/: news_article_1.md
documents/outputs/: citations.md  experimental_design.md  hypotheses.md  insight_thoughts.md  scientific_summary.md
