[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Nate <nlarsen23.student@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.2"
sphinx-rtd-theme = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
