[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Nate <nlarsen23.student@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx-rtd-theme = "^1.3.0"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
