[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Nate <nlarsen23.student@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx-autobuild = "^2021.3.14"
m2r2 = "^0.3.3.post2"
furo = "^2023.3.27"
myst-nb = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
